Add NPM postinstall script to automatically run "bower install" after npm install finishes

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
+    "postinstall": "bower install",
     "test": "ember test"
   },
   "repository": "",
