--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-password-toggle",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "Easily show and hide password via a toggle button.",
   "directories": {
     "test": "tests"
@@ -34,7 +34,9 @@
     "ember-cli-qunit": "0.1.2",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "phantomjs": "~1.9.13",
+    "ember-cli-test-helpers": "0.0.4"
   },
   "keywords": [
     "ember-addon",
