[DEPENDENCY]: bumping the version of ember-cli and doing an ember init to keep up to date

--- a/.gitignore
+++ b/.gitignore
@@ -8,10 +8,14 @@
 /node_modules
 /bower_components
 
-# test output
-/coverage
-
 # misc
+/.sass-cache
+/connect.lock
+/coverage/*
+/libpeerconnection.log
+npm-debug.log
+testem.log
+
 .*
 *.lock
 *.log
