--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
   "author": "Nick Christus",
   "license": "MIT",
   "devDependencies": {
-    "bower": "^1.3.12",
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.1.5",
+    "ember-cli": "0.1.12",
+    "ember-cli-6to5": "^3.0.0",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.7",
-    "ember-cli-esnext": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.1.2",
+    "ember-cli-qunit": "0.3.1",
+    "ember-cli-app-version": "0.3.1",
+    "ember-cli-uglify": "1.0.1",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
+    "bower": "^1.3.12",
     "phantomjs": "~1.9.13",
     "ember-cli-test-helpers": "0.0.4"
   },
