[DEPENDENCY] upgrade version of ember-cli to 0.2.3

--- a/.jshintrc
+++ b/.jshintrc
@@ -2,13 +2,7 @@
   "predef": [
     "document",
     "window",
-    "-Promise",
-    "$",
-    "find",
-    "andThen",
-    "click",
-    "ok",
-    "equal"
+    "-Promise"
   ],
   "browser": true,
   "boss": true,
