--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
   "author": "Nick Christus",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.0",
-    "broccoli-ember-hbs-template-compiler": "^1.6.1",
-    "ember-cli": "0.1.12",
-    "ember-cli-6to5": "^3.0.0",
-    "ember-cli-content-security-policy": "0.3.0",
-    "ember-cli-dependency-checker": "0.0.7",
+    "broccoli-asset-rev": "^2.0.2",
+    "ember-cli": "0.2.3",
+    "ember-cli-app-version": "0.3.3",
+    "ember-cli-content-security-policy": "0.4.0",
+    "ember-cli-dependency-checker": "0.0.8",
+    "ember-cli-htmlbars": "0.7.4",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.1",
-    "ember-cli-app-version": "0.3.1",
+    "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
-    "ember-export-application-global": "^1.0.0",
+    "ember-export-application-global": "^1.0.2",
+    "ember-disable-prototype-extensions": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
-    "bower": "^1.3.12",
+    "bower": "1.4.1",
     "phantomjs": "~1.9.13",
-    "ember-cli-test-helpers": "0.0.4"
+    "ember-cli-test-helpers": "1.0.0"
   },
   "keywords": [
     "ember-addon",
@@ -47,6 +47,9 @@
     "password",
     "toggle"
   ],
+  "dependencies": {
+    "ember-cli-babel": "^5.0.0"
+  },
   "ember-addon": {
     "configPath": "tests/dummy/config"
   }
