--- a/package.json
+++ b/package.json
@@ -23,23 +23,24 @@
   "author": "Nick Christus",
   "license": "MIT",
   "devDependencies": {
-    "broccoli-asset-rev": "^2.0.2",
-    "ember-cli": "0.2.7",
-    "ember-cli-app-version": "0.3.3",
+    "broccoli-asset-rev": "^2.1.2",
+    "ember-cli": "1.13.8",
+    "ember-cli-app-version": "0.5.0",
     "ember-cli-content-security-policy": "0.4.0",
-    "ember-cli-dependency-checker": "1.0.0",
-    "ember-cli-htmlbars": "0.7.6",
-    "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "0.3.13",
-    "ember-cli-uglify": "1.0.1",
-    "ember-export-application-global": "^1.0.2",
+    "ember-cli-dependency-checker": "1.0.1",
+    "ember-cli-htmlbars": "0.7.9",
+    "ember-cli-htmlbars-inline-precompile": "^0.2.0",
+    "ember-cli-inject-live-reload": "^1.3.1",
+    "ember-cli-qunit": "^1.0.0",
+    "ember-cli-uglify": "^1.2.0",
+    "ember-export-application-global": "^1.0.3",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-disable-prototype-extensions": "^1.0.0",
     "express": "^4.8.5",
     "glob": "^4.0.5",
-    "bower": "1.4.1",
+    "bower": "1.6.5",
     "phantomjs": "~1.9.13",
-    "ember-cli-test-helpers": "1.0.0"
+    "ember-cli-test-helpers": "1.6.0"
   },
   "keywords": [
     "ember-addon",
